--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.8",
     "jspdf": "^2.5.1",
